<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_agenda" />

    <item
        android:id="@+id/navigation_rendimento"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_rendimento" />

    <item
        android:id="@+id/navigation_qrcode"
        android:icon="@drawable/ic_qr_code_24"
        android:title="@string/title_qrcode"
        />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_perfil"
        />


</menu>
